FIXED: Content gets hidden on mobile's landscape mode

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,5 +1,7 @@
+/* FIXME: Content gets hidden on mobile's landscape mode */
+
 .hero {
-  height: 100vh;
+  height: 100vmax;
   display: flex;
   align-items: center;
   justify-content: start;
